--- a/.github/workflows/docker-publish.yml
+++ b/.github/workflows/docker-publish.yml
@@ -34,3 +34,6 @@ jobs:
         context: .
         push: true
         tags: ghcr.io/${{ github.repository }}:latest
+
+    - name: Trigger Deployment
+      run: curl -X POST ${{ secrets.DEPLOY_WEBHOOK_URL }}
